avoid null check on fields where NULL is impossible (BUG#2393)